[package]
name = "kvdb-memorydb"
version = "0.10.0"
authors = ["AXIA Technologies <sankar.boro@zeeve.io>"]
repository = "https://github.com/axia-tech/axia-common"
description = "A key-value in-memory database that implements the  `KeyValueDB` trait"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.56.1"

[dependencies]
axia-util-mem = { path = "../axia-util-mem", version = "0.10.2", default-features = false, features = ["std"] }
parking_lot = "0.11.1"
kvdb = { version = "0.10", path = "../kvdb" }

[dev-dependencies]
kvdb-shared-tests = { path = "../kvdb-shared-tests", version = "0.8" }

[features]
default = []
