[package]
name = "kvdb-shared-tests"
version = "0.8.0"
authors = ["AXIA Technologies <sankar.boro@zeeve.io>"]
edition = "2018"
rust-version = "1.56.1"
description = "Shared tests for kvdb functionality, to be executed against actual implementations"
license = "MIT OR Apache-2.0"

[dependencies]
kvdb = { path = "../kvdb", version = "0.10" }
