[package]
name = "kvdb"
version = "0.10.0"
authors = ["AXIA Technologies <sankar.boro@zeeve.io>"]
repository = "https://github.com/axia-tech/axia-common"
description = "Generic key-value trait"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.56.1"

[dependencies]
smallvec = "1.0.0"
axia-util-mem = { path = "../axia-util-mem", version = "0.10.2", default-features = false }
