[package]
name = "rlp-derive"
version = "0.1.0"
authors = ["AXIA Technologies <sankar.boro@zeeve.io>"]
license = "MIT OR Apache-2.0"
description = "Derive macro for #[derive(RlpEncodable, RlpDecodable)]"
homepage = "http://axiacoin.network"
edition = "2018"
rust-version = "1.56.1"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.14"
quote = "1.0.2"
proc-macro2 = "1.0.8"

[dev-dependencies]
rlp = { version = "0.5.0", path = "../rlp" }
