[package]
name = "axia-util-mem-derive"
version = "0.1.0"
authors = ["AXIA Technologies <sankar.boro@zeeve.io>"]
license = "MIT OR Apache-2.0"
description = "Crate for memory reporting"
repository = "https://github.com/axiatech/pariry-common/axia-util-mem/derive"
edition = "2018"
rust-version = "1.56.1"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
synstructure = "0.12"
