[package]
name = "impl-num-traits"
version = "0.1.1"
authors = ["AXIA Technologies <sankar.boro@zeeve.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/axia-tech/axia-common"
description = "num-traits implementation for uint."
edition = "2018"
rust-version = "1.56.1"

[dependencies]
num-traits = { version = "0.2", default-features = false }
integer-sqrt = "0.1"
uint = { version = "0.9.1", path = "../../../uint", default-features = false }
