[package]
name = "impl-rlp"
version = "0.3.0"
authors = ["AXIA Technologies <sankar.boro@zeeve.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/axia-tech/axia-common"
description = "RLP serialization support for uint and fixed hash."
edition = "2018"
rust-version = "1.56.1"

[dependencies]
rlp = { version = "0.5", path = "../../../rlp", default-features = false }

[features]
default = ["std"]
std = ["rlp/std"]
